--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Hexlet backend project",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dastorin",
   "license": "ISC",
+  "bin": {
+    "page-loader": "bin/page_loader.js"
+  },
   "dependencies": {
+    "commander": "^11.1.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1"
   },
